# Versatile-Skyblock-Macro

./: README.md  bot.py  configmanager.py  configparser.py  docs.md  macro  macro.py  macrocontroller.py  main.py  packages.py  pyproject.toml  subcommands.py  sugarcane.py
Versatile-Skyblock-Macro/: README.md  docs.md
Versatile-Skyblock-Macro/macro/: bot.py  config.ini  macro.py
Versatile-Skyblock-Macro/macro/macros/: netherwart.py
Versatile-Skyblock-Macro/macro/macros/scripts/: _helpers.py
Versatile-Skyblock-Macro/new/: bot.py  config.ini  macrocontroller.py  run.bat
Versatile-Skyblock-Macro/new/macros/: potato.py
macro/: bot.py  config.ini  configmanager.py  events.py  macro.py  macrocontroller.py
macro/macros/: netherwart.py  potato.py  sugarcane.py
macro/macros/scripts/: _macrocheck.py
macro/modules/: netherwart.py  sugarcane.py
macro/scripts/: printsystem.py  subcommands.py
macros/: macro.py  macrocheck.py  netherwart.py  potato.py  sugarcane.py
modules/: netherwart.py  sugarcane.py
new/: bot.py  config.ini  configmanager.py  events.py  macro.py  macrocheck.py  macrocontroller.py  run.bat  start.py  sugarcane.py  test.py
new/macros/: coco.py  macro.py  macrocheck.py  netherwart.py  potato.py  sugarcane.py  test.py
new/scripts/: subcommands.py
scripts/: subcommands.py
