[tool.poetry]
name = "repl_python3_FullAutoMacro-1"
version = "0.1.0"
description = ""
authors = ["Trb0Encabulator <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
modules = "^1.0.0"
mouse = "^0.7.1"
pynput = "^1.7.6"
discord = "^1.7.3"
keyboard = "^0.13.5"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
